--- a/Proxy_Webscrapping.ipynb
+++ b/Proxy_Webscrapping.ipynb
@@ -8394,7 +8394,7 @@
     "# # Function to connect to MongoDB\n",
     "# def connect_to_mongo():\n",
     "#     print(\"Connecting to MongoDB...\")\n",
-    "#     mongo_uri = os.getenv(\"MONGO_URI\", \"mongodb://sidd:siddhesh123@128.140.104.241/\")\n",
+    "#     mongo_uri = os.getenv(\"MONGO_URI\", \"mongodb:/\")\n",
     "#     client = MongoClient(mongo_uri)\n",
     "#     db = client['MLS']\n",
     "#     collection = db['scrapped_data']\n",
